# price_scraper

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  requirements.txt  start_server.cmd
data/: price_tracker.sqlite3
kategoriler/: 1000_gr_cevizli_kome_urun_listesi.xlsx  1000_gr_kavrulmus_fındık_urun_listesi.xlsx  1000_gr_pestil_urun_listesi.xlsx  1000_gr_pikola_kome_urun_listesi.xlsx  250_ml_bromelian_surubu_urun_listesi.xlsx  500_ml_alıc_sirkesi_urun_listesi.xlsx  500_ml_ananas_sirkesi_urun_listesi.xlsx  500_ml_detoks_sirkesi_urun_listesi.xlsx  500_ml_elma_sirkesi_urun_listesi.xlsx  500_ml_enginar_sirkesi_urun_listesi.xlsx  500_ml_kolajen_sirkesi_urun_listesi.xlsx  500_ml_uzum_sirkesi_urun_listesi.xlsx  70lik_fıstık_ezmesi_urun_listesi.xlsx  99luk_fıstık_ezmesi_urun_listesi.xlsx  dil_peyniri_urun_listesi.xlsx  dut_pekmezi_urun_listesi.xlsx  fındık_ezmesi_urun_listesi.xlsx  hurmalı_fındık_ezmesi_urun_listesi.xlsx  ispir_fasulyesi_urun_listesi.xlsx  karadut_pekmezi_urun_listesi.xlsx  kestane_bali_urun_listesi.xlsx  keçiboynuzu_pekmezi_urun_listesi.xlsx  kolot_peyniri_urun_listesi.xlsx  kozalak_pekmezi_urun_listesi.xlsx  matcha_cayi_urun_listesi.xlsx  mayıs_cayi_urun_listesi.xlsx  mısır_unu_urun_listesi.xlsx  nar_eksisi_urun_listesi.xlsx  oolong_cay_urun_listesi.xlsx  seker_fasulyesi_urun_listesi.xlsx  sekersiz_fındık_ezmesi_urun_listesi.xlsx  taze_kaşar_peyniri_urun_listesi.xlsx  tel_peyniri_urun_listesi.xlsx  tereyagı_urun_listesi.xlsx  uzum_pekmezi_urun_listesi.xlsx  yesil_cay_urun_listesi.xlsx  çiçek_bali_urun_listesi.xlsx
price_tracker/: __init__.py  (+12 more)
(+35 files in other folders)
